examples/bad/runtime3.swifty
//function does not return any value
func foo() -> int {
   if (false)
      return 0
}

foo()
